Fixes issue with some images that are too tall
Make sure to clear browser cache several times to test

--- a/components/com_apps/css/apps.css
+++ b/components/com_apps/css/apps.css
@@ -12,5 +12,5 @@
 
 .com-apps-container .thumbnail .item-image img {
 	max-width: 100%;
-	max-height: 100%;
+	max-height: 90%;
 }
